--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -19,4 +19,13 @@ test:
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
+  email_provider_username: <%= ENV["SENDGRID_USERNAME"] %>
+  email_provider_password: <%= ENV["SENDGRID_PASSWORD"] %>
+  domain_name: lestleygabo.herokuapp.com
+  owner_email: <%= ENV["OWNER_EMAIL"] %>
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+
+  
+  
+  
+  
