--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -13,7 +13,7 @@
 development:
   email_provider_username: <%= ENV["SENDGRID_USERNAME"] %>
   email_provider_password: <%= ENV["SENDGRID_PASSWORD"] %>
-  domain_name: online-portfolio-cloned-beeftosino.c9users.io
+  domain_name: https://online-portfolio-cloned-beeftosino.c9users.io
   owner_email: <%= ENV["OWNER_EMAIL"] %>
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
 
