--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,4 @@
 
 meta_product_name: "Lestley Gabo Portfolio"
 meta_title: "Lestley Gabo - Portfolio"
-meta_description: "Resume, Profiles, Web Projects, SFU Projects, and SFU Labs"
+meta_description: "Lestley Gabo Resume, Profiles, Web Projects, SFU Projects, and SFU Labs"
